--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -64,7 +64,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Google Webfonts -->
-<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
+<!-- <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'> -->
+<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Cormorant+Garamond rel='stylesheet' type='text/css'> 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.min.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/academicons.css" />
