--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -21,7 +21,7 @@ Computer Vision and Pattern Recognition Conference Workshops (<strong>CVPR</stro
 <br />
 <a href="javascript:toggleBibtex('lealcvprw2016')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1604.07866">[PDF]</a> 
+<a href="https://arxiv.org/abs/1604.0786f6">[PDF]</a> 
 </p>
 
 
@@ -485,7 +485,7 @@ Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspect
 </td>
 <td>
 <p>
-F. Dellaert, J.-M. Frahm, M. Pollefeys, B. Rosenhahn and <strong>L. Leal-Taix&eacute;</strong><br />
+F. Dellaert, J.-M. Frahm, M. Pollefeys, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn <br />
 <i>Outdoor and Large-Scale Real-World Scene Analysis</i><br />
 Springer Berlin Heidelberg,
 
@@ -501,7 +501,7 @@ Lecture Notes in Computer Science,
 <div id="bib_lealbook2012" class="bibtex noshow">
 <pre>
 @book{lealbook2012,
-  author = {F. Dellaert and J.-M. Frahm and M. Pollefeys and B. Rosenhahn and <strong>L. Leal-Taix&eacute;</strong>},
+  author = {F. Dellaert and J.-M. Frahm and M. Pollefeys and <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn },
   title = {Outdoor and Large-Scale Real-World Scene Analysis},
   publisher = {Springer Berlin Heidelberg},
   year = {2012}
