iccv 2015 paper missing

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -40,6 +40,51 @@ Computer Vision and Pattern Recognition Conference Workshops (<strong>CVPR</stro
 
 </table>
 
+
+
+<!-- Item: fenziiccv2015 -->
+<!--<li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1" src="{{ site.url }}/images/papers/FenLeaOstTuyICCV2015.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, J. Ostermann and T. Tuytelaars <br />
+<i>Continuous Pose Estimation with a Spatial Ensemble of Fisher Regressors
+</i><br />
+International Conference in Computer Vision (<strong> ICCV </strong>),
+
+
+
+
+2015.
+
+<br />
+<a href="javascript:toggleBibtex(‘fenziiccv2015’)”>[BibTeX]</a>
+
+<a href="https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaOstTuyICCV2015.pdf">[PDF]</a> 
+</p>
+
+
+<div id="bib_fenziiccv2015” class="bibtex noshow">
+<pre>
+@article{fenziiccv2015,
+  author = {M. Fenzi and <strong>L. Leal-Taix&eacute;</strong> and J. Osterman and T. Tuytelaars},
+  title = {Continuous Pose Estimation with a Spatial Ensemble of Fisher Regressors},
+  journal = {International Conference in Computer Vision (<strong> ICCV </strong>)},
+  year = {2015}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
+
+
 <!-- Item: milanarxiv2016 -->
 <!--<li >-->
 <table style="width:100%">
