iccv 2015 paper missing

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -62,7 +62,7 @@ International Conference in Computer Vision (<strong> ICCV </strong>),
 2015.
 
 <br />
-<a href="javascript:toggleBibtex(‘fenziiccv2015’)”>[BibTeX]</a>
+<a href="javascript:toggleBibtex('fenziiccv2015')”>[BibTeX]</a>
 
 <a href="https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaOstTuyICCV2015.pdf">[PDF]</a> 
 </p>
