--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -62,13 +62,13 @@ International Conference in Computer Vision (<strong> ICCV </strong>),
 2015.
 
 <br />
-<a href="javascript:toggleBibtex('fenziiccv2015')”>[BibTeX]</a>
+<a href="javascript:toggleBibtex('fenziiccv2015')">[BibTeX]</a>
 
 <a href="https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaOstTuyICCV2015.pdf">[PDF]</a> 
 </p>
 
 
-<div id="bib_fenziiccv2015” class="bibtex noshow">
+<div id="bib_fenziiccv2015" class="bibtex noshow">
 <pre>
 @article{fenziiccv2015,
   author = {M. Fenzi and <strong>L. Leal-Taix&eacute;</strong> and J. Osterman and T. Tuytelaars},
