adding robertos paper

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -1,5 +1,49 @@
 <!-- Generated from JabRef by PubList by Truong Nghiem at 03:43 on 2016.07.08. Scripts modified by Laura Leal-Taixe.-->
 
+<!-- Item: henschelarxiv2016 -->
+<!--<li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1" src="{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.pdf" width="100px" height="100px">
+</td>
+<td>
+<p>
+R. Henschel, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and K. Schindler<br />
+<i>Tracking with multi-level features</i><br />
+arXiv:1607.07304,
+
+
+
+
+2016.
+
+<br />
+<a href="javascript:toggleBibtex('henschelarxiv2016')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1607.07304">[PDF]</a> 
+</p>
+
+
+<div id="bib_henschelarxiv2016" class="bibtex noshow">
+<pre>
+@article{henschelarxiv2016,
+  author = {R. Henschel, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and K. Schindler},
+  title = {Tracking with multi-level features},
+  journal = {arXiv:1607.07304},
+  year = {2016}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
+
+
+
+
 <!-- Item: lealcvprw2016 -->
 <!--<li >-->
 <table style="width:100%">
