add robertos paper and icon

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -5,7 +5,7 @@
 <table style="width:100%">
 <tr>
 <td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1" src="{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.pdf" width="100px" height="100px">
+<img style="float: left;margin-right: 10px" border="1" src="{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.png" width="100px" height="100px">
 </td>
 <td>
 <p>
