--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -65,7 +65,7 @@ Computer Vision and Pattern Recognition Conference Workshops (<strong>CVPR</stro
 <br />
 <a href="javascript:toggleBibtex('lealcvprw2016')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1604.0786f6">[PDF]</a> 
+<a href="https://arxiv.org/abs/1604.07866">[PDF]</a> 
 </p>
 
 
@@ -108,7 +108,7 @@ International Conference in Computer Vision (<strong> ICCV </strong>),
 <br />
 <a href="javascript:toggleBibtex('fenziiccv2015')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaOstTuyICCV2015.pdf">[PDF]</a> 
+<a href="https://drive.google.com/file/d/0B1e2GU8Qot86bEIzb3NzeHJKRWM/view?usp=sharing">[PDF]</a> 
 </p>
 
 
