--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -108,7 +108,7 @@ International Conference in Computer Vision (<strong> ICCV </strong>),
 <br />
 <a href="javascript:toggleBibtex('fenziiccv2015')">[BibTeX]</a>
 
-<a href="https://drive.google.com/file/d/0B1e2GU8Qot86bEIzb3NzeHJKRWM/view?usp=sharing">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bEIzb3NzeHJKRWM">[PDF]</a> 
 </p>
 
 
@@ -190,7 +190,7 @@ Winter Conference on Applications of Computer Vision (<strong>WACV</strong>),
 <br />
 <a href="javascript:toggleBibtex('fenziwacv2015')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaSchOstWACV2015.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86U1Z2eFJvZW44TXc">[PDF]</a> 
 </p>
 
 
@@ -270,7 +270,7 @@ Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('milancvpr2015')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/MilLeaSchReiCVPR2015.pdf">[PDF]</a> <a href="http://youtu.be/zlNVOb7MkBI"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86S0t6VU82cUFVOG8">[PDF]</a> <a href="http://youtu.be/zlNVOb7MkBI"> [Video]</a> 
 </p>
 
 
@@ -351,7 +351,7 @@ German Conference on Pattern Recognition (<strong>GCPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('henschelgcpr2014')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86OE5pckpsSldWQ0U/HenLeaRosGCPR2014.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ZW5CSUpOclZBb2M">[PDF]</a> 
 </p>
 
 
@@ -391,7 +391,7 @@ Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('lealcvpr2014')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86OE5pckpsSldWQ0U/LeaFenKuzRosSavCVPR2014.pdf">[PDF]</a> <a href="https://googledrive.com/host/0B1e2GU8Qot86OE5pckpsSldWQ0U/LeaFenKuzRosSavSUNw2014.pdf"> [SUNw abstract]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
 </p>
 
 
@@ -465,7 +465,7 @@ Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('fenzicvpr2013')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86Q29zdHhoTEEzTFU/FenLeaRosOstCVPR2013.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86cTRnWGFnZ3dCQ1k">[PDF]</a> 
 </p>
 
 
@@ -505,7 +505,7 @@ International Conference on Computer Vision (<strong>ICCV</strong>) Workshops. 3
 <br />
 <a href="javascript:toggleBibtex('kuznetsovaiccvw2013')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86Q29zdHhoTEEzTFU/KuzLeaRosICCVW2013.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86R0Rkb0hjS1JodFE">[PDF]</a> 
 </p>
 
 
@@ -545,7 +545,7 @@ Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspect
 <br />
 <a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86aVFCYTlFT3cxcGc/LeaRosBookChapter2012.pdf">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 
@@ -622,7 +622,7 @@ German Conference on Pattern Recognition (<strong>GCPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('fenzidagm2012')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86aVFCYTlFT3cxcGc/FenDraLeaRosOstDAGM2012.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86c1NwQW43YTU2ZXM">[PDF]</a> 
 </p>
 
 
@@ -662,7 +662,7 @@ Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('lealcvpr2012')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86aVFCYTlFT3cxcGc/LeaPonRosCVPR2012.pdf">[PDF]</a> <a href="https://googledrive.com/host/0B1e2GU8Qot86aVFCYTlFT3cxcGc/LeaPonRosCVPR2012_poster.pdf"> [Poster]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
 </p>
 
 
@@ -702,7 +702,7 @@ vol. 7474,
 <br />
 <a href="javascript:toggleBibtex('lealdagstuhl2012')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86aVFCYTlFT3cxcGc/LeaPonRosDagstuhl2012.pdf">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 
@@ -784,7 +784,7 @@ Outdoor and Large-Scale Real-World Scene Analysis,
 <br />
 <a href="javascript:toggleBibtex('ponsdagstuhl2012')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86aVFCYTlFT3cxcGc/PonLeaGalRosDagstuhl12.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86QmFmTkpoVWlsVGs">[PDF]</a> 
 </p>
 
 
@@ -825,7 +825,7 @@ Video Processing and Computational Video,
 <br />
 <a href="javascript:toggleBibtex('lealdagstuhl2011')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86bFRmWU9JSThFWXM/LeaHeyRosRosVPCV2011.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86cEc1eUlYOXh2MzQ">[PDF]</a> 
 </p>
 
 
@@ -866,7 +866,7 @@ International Conference on Computer Vision (<strong>ICCV</strong>) Workshops. 1
 <br />
 <a href="javascript:toggleBibtex('lealiccv2011')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86bFRmWU9JSThFWXM/LeaPonRosICCVW2011.pdf">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
 </p>
 
 
@@ -906,7 +906,7 @@ Microscopic Image Analysis with Applications in Biology (MIAAB),
 <br />
 <a href="javascript:toggleBibtex('maleschlijskibio2011')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86bFRmWU9JSThFWXM/MalLeaWeiFinAldClaSenRosRos2011.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk">[PDF]</a> 
 </p>
 
 
@@ -946,7 +946,7 @@ German Conference on Pattern Recognition (<strong>GCPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('ponsdagm2011')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86bFRmWU9JSThFWXM/PonLeaTruRosDAGM2011.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8">[PDF]</a> 
 </p>
 
 
@@ -986,7 +986,7 @@ International Conference on Computer Vision (<strong>ICCV</strong>),
 <br />
 <a href="javascript:toggleBibtex('ponsiccv2011')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86bFRmWU9JSThFWXM/PonBaaGalLeaMueSeiRosICCV2011.pdf">[PDF]</a> <a href="https://googledrive.com/host/0B1e2GU8Qot86bFRmWU9JSThFWXM/PonBaaGalLeaMueSeiRosICCV2011_sup.pdf"> [Suppl.]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
 </p>
 
 
@@ -1026,7 +1026,7 @@ German Conference on Pattern Recognition (<strong>GCPR</strong>),
 <br />
 <a href="javascript:toggleBibtex('lealdagm2010')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86R1RiQ2k2MUc0ckU/LeaHeyWeiRosRosDAGM2010.pdf">[PDF]</a> <a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a> <a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
 </p>
 
 
@@ -1066,7 +1066,7 @@ World Congress on Medical Physics and Biomedical Engineering,
 <br />
 <a href="javascript:toggleBibtex('lealmsc2009')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86NUxUcGhUUWdBdDg/LeaCosRosBroMED2009.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXhSdGlZZEplRlE">[PDF]</a> 
 </p>
 
 
@@ -1106,7 +1106,7 @@ Workshops on Motion and Video Computing (<strong>WMVC</strong>),
 <br />
 <a href="javascript:toggleBibtex('lealwmvc2009')">[BibTeX]</a>
 
-<a href="https://googledrive.com/host/0B1e2GU8Qot86NUxUcGhUUWdBdDg/LeaHeyRosRosWMVC2009.pdf">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NmE3NC1BaXZUa0U">[PDF]</a> 
 </p>
 
 
