--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -15,7 +15,8 @@ Sergi Caelles, Kevis-Kokitsi Maninis, Jordi Pont-Tuset, <strong> L. Leal-Taix&ea
 
 
 <br />
-<a href="javascript:toggleBibtex('caellesarxiv2016')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#caellesarxiv2016').toggle();">[BibTeX]</a>
+
 
 <a href="https://arxiv.org/abs/1611.05198">[PDF]</a> 
 </p>
@@ -51,7 +52,8 @@ R. Henschel, <strong> L. Leal-Taix&eacute; </strong>, B. Rosenhahn and K. Schind
 
 
 <br />
-<a href="javascript:toggleBibtex('henschelarxiv2016')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#henschelarxiv2016').toggle();">[BibTeX]</a>
+
 
 <a href="https://arxiv.org/abs/1607.07304">[PDF]</a> 
 </p>
@@ -87,7 +89,8 @@ R. Henschel, <strong> L. Leal-Taix&eacute; </strong>, B. Rosenhahn and K. Schind
 
 
 <br />
-<a href="javascript:toggleBibtex('lealcvprw2016')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealcvprw2016').toggle();">[BibTeX]</a>
+
 
 <a href="https://arxiv.org/abs/1604.07866">[PDF]</a> 
 </p>
@@ -123,7 +126,8 @@ A. Milan, <strong>L. Leal-Taix&eacute;</strong>, I. Reid, S. Roth and K. Schindl
 
 
 <br />
-<a href="javascript:toggleBibtex('milanarxiv2016')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#milanarxiv2016').toggle();">[BibTeX]</a>
+
 
 <a href="https://arxiv.org/abs/1603.00831">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
@@ -159,7 +163,8 @@ M. Fenzi, <b>L. Leal-Taixe, J. Ostermann and T. Tuytelaars</b><br />
 
 
 <br />
-<a href="javascript:toggleBibtex('fenziiccv2015')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#fenziiccv2015').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86bEIzb3NzeHJKRWM">[PDF]</a> 
 </p>
@@ -195,7 +200,8 @@ M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and B. Rosenhahn<b
 
 
 <br />
-<a href="javascript:toggleBibtex('fenziwacv2015')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#fenziwacv2015').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86U1Z2eFJvZW44TXc">[PDF]</a> 
 </p>
@@ -231,7 +237,8 @@ M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and B. Rosenhahn<b
 
 
 <br />
-<a href="javascript:toggleBibtex('lealarxiv2015')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealarxiv2015').toggle();">[BibTeX]</a>
+
 
 <a href="https://arxiv.org/abs/1504.01942">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
@@ -267,7 +274,8 @@ A. Milan, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and I. Reid<br />
 
 
 <br />
-<a href="javascript:toggleBibtex('milancvpr2015')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#milancvpr2015').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86S0t6VU82cUFVOG8">[PDF]</a> 
 </p>
@@ -303,7 +311,8 @@ D. A. B. Oliveria, <strong>L. Leal-Taix&eacute;</strong>, R. Q. Feitosa and B. R
 
 
 <br />
-<a href="javascript:toggleBibtex('oliveiracmig2015')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#oliveiracmig2015').toggle();">[BibTeX]</a>
+
 
 <a href="http://www.sciencedirect.com/science/article/pii/S0895611115001469">[PDF]</a> 
 </p>
@@ -339,7 +348,8 @@ R. Henschel, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 <br />
-<a href="javascript:toggleBibtex('henschelgcpr2014')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#henschelgcpr2014').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86ZW5CSUpOclZBb2M">[PDF]</a> 
 </p>
@@ -375,7 +385,8 @@ R. Henschel, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 <br />
-<a href="javascript:toggleBibtex('lealcvpr2014')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealcvpr2014').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
 </p>
@@ -411,7 +422,8 @@ R. Henschel, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 <br />
-<a href="javascript:toggleBibtex('lealthesis2014')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealthesis2014').toggle();">[BibTeX]</a>
+
 
 <a href="http://arxiv.org/abs/1411.7935">[PDF]</a> 
 </p>
@@ -447,7 +459,8 @@ M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and J. Ostermann<b
 
 
 <br />
-<a href="javascript:toggleBibtex('fenzicvpr2013')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#fenzicvpr2013').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86cTRnWGFnZ3dCQ1k">[PDF]</a> 
 </p>
@@ -483,7 +496,8 @@ A. Kuznetsova, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 <br />
-<a href="javascript:toggleBibtex('kuznetsovaiccvw2013')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#kuznetsovaiccvw2013').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86R0Rkb0hjS1JodFE">[PDF]</a> 
 </p>
@@ -519,9 +533,10 @@ A. Kuznetsova, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 <br />
-<a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealbookchapter2012').toggle();">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code:"> [Code]</a> 
+
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealbookchapter2012" class="bibtex noshow">
@@ -556,7 +571,8 @@ M. Fenzi, R. Dragon, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and J. 
 
 
 <br />
-<a href="javascript:toggleBibtex('fenzidagm2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#fenzidagm2012').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86c1NwQW43YTU2ZXM">[PDF]</a> 
 </p>
@@ -592,7 +608,8 @@ April
 
 
 <br />
-<a href="javascript:toggleBibtex('lealbook2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealbook2012').toggle();">[BibTeX]</a>
+
 
 <a href="http://link.springer.com/book/10.1007%2F978-3-642-34091-8">[PDF]</a> 
 </p>
@@ -628,9 +645,10 @@ April
 
 
 <br />
-<a href="javascript:toggleBibtex('lealcvpr2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealcvpr2012').toggle();">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a><a href="{{ site.url }}/code:"> [Code]</a><a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
+
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
 </p>
 
 <div id="bib_lealcvpr2012" class="bibtex noshow">
@@ -664,9 +682,10 @@ April
 
 
 <br />
-<a href="javascript:toggleBibtex('lealdagstuhl2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealdagstuhl2012').toggle();">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a><a href="{{ site.url }}/code:"> [Code]</a> 
+
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealdagstuhl2012" class="bibtex noshow">
@@ -702,7 +721,8 @@ S. Maleschlijski, G. H. Sendra, A. Di Fino, <strong>L. Leal-Taix&eacute;</strong
 
 
 <br />
-<a href="javascript:toggleBibtex('maleschlijskibio2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#maleschlijskibio2012').toggle();">[BibTeX]</a>
+
 
 <a href="https://www.researchgate.net/publication/230717042_Three_Dimensional_Tracking_of_Exploratory_Behavior_of_Barnacle_Cyprids_Using_Stereoscopy">[PDF]</a> 
 </p>
@@ -738,7 +758,8 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br
 
 
 <br />
-<a href="javascript:toggleBibtex('ponsdagstuhl2012')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#ponsdagstuhl2012').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86QmFmTkpoVWlsVGs">[PDF]</a> 
 </p>
@@ -775,7 +796,8 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br
 
 
 <br />
-<a href="javascript:toggleBibtex('lealdagstuhl2011')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealdagstuhl2011').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86cEc1eUlYOXh2MzQ">[PDF]</a> 
 </p>
@@ -812,9 +834,10 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br
 
 
 <br />
-<a href="javascript:toggleBibtex('lealiccv2011')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealiccv2011').toggle();">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a><a href="{{ site.url }}/code:"> [Code]</a><a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
+
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
 </p>
 
 <div id="bib_lealiccv2011" class="bibtex noshow">
@@ -848,7 +871,8 @@ S. Maleschlijski, <strong>L. Leal-Taix&eacute;</strong>, S. Weisse, A. Di Fino, 
 
 
 <br />
-<a href="javascript:toggleBibtex('maleschlijskibio2011')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#maleschlijskibio2011').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk">[PDF]</a> 
 </p>
@@ -884,7 +908,8 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, T. Truong and B. Rosenhahn<
 
 
 <br />
-<a href="javascript:toggleBibtex('ponsdagm2011')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#ponsdagm2011').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8">[PDF]</a> 
 </p>
@@ -920,7 +945,8 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 <br />
-<a href="javascript:toggleBibtex('ponsiccv2011')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#ponsiccv2011').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
 </p>
@@ -956,7 +982,8 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 <br />
-<a href="javascript:toggleBibtex('lealdagm2010')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealdagm2010').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a><a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
 </p>
@@ -992,7 +1019,8 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 <br />
-<a href="javascript:toggleBibtex('lealmsc2009')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealmsc2009').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXhSdGlZZEplRlE">[PDF]</a> 
 </p>
@@ -1028,7 +1056,8 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 <br />
-<a href="javascript:toggleBibtex('lealwmvc2009')">[BibTeX]</a>
+<a style="cursor: pointer;" onclick="$('#lealwmvc2009').toggle();">[BibTeX]</a>
+
 
 <a href="https://drive.google.com/open?id=0B1e2GU8Qot86NmE3NC1BaXZUa0U">[PDF]</a> 
 </p>
