pubs with journal

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -12,7 +12,7 @@ Sergi Caelles, Kevis-Kokitsi Maninis, Jordi Pont-Tuset, <strong> L. Leal-Taix&ea
 
 
 2016.
-
+arXiv:1611.05198.
 
 <br />
 
@@ -49,7 +49,7 @@ R. Henschel, <strong> L. Leal-Taix&eacute; </strong>, B. Rosenhahn and K. Schind
 
 
 2016.
-
+arXiv:1607.07304.
 
 <br />
 
@@ -86,7 +86,7 @@ R. Henschel, <strong> L. Leal-Taix&eacute; </strong>, B. Rosenhahn and K. Schind
 
 
 2016.
-
+IEEE Conference on Computer Vision and Pattern Recognition Workshops (CVPR). DeepVision: Deep Learning for Computer Vision..
 
 <br />
 
@@ -123,7 +123,7 @@ A. Milan, <strong>L. Leal-Taix&eacute;</strong>, I. Reid, S. Roth and K. Schindl
 
 
 2016.
-
+arXiv:1603.00831.
 
 <br />
 
@@ -160,7 +160,7 @@ M. Fenzi, <b>L. Leal-Taixe, J. Ostermann and T. Tuytelaars</b><br />
 
 
 2015.
-
+IEEE International Conference on Computer Vision (ICCV).
 
 <br />
 
@@ -197,7 +197,7 @@ M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and B. Rosenhahn<b
 
 
 2015.
-
+IEEE Winter Conference on Applications of Computer Vision (WACV).
 
 <br />
 
@@ -234,7 +234,7 @@ M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and B. Rosenhahn<b
 
 
 2015.
-
+arXiv:1504.01942.
 
 <br />
 
@@ -308,7 +308,7 @@ D. A. B. Oliveria, <strong>L. Leal-Taix&eacute;</strong>, R. Q. Feitosa and B. R
 
 
 2015.
-
+Computerized Medical Imaging and Graphics.
 
 <br />
 
@@ -345,7 +345,7 @@ R. Henschel, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 2014.
-
+German Conference on Pattern Recognition (GCPR).
 
 <br />
 
@@ -382,7 +382,7 @@ R. Henschel, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 2014.
-
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 
 <br />
 
@@ -456,7 +456,7 @@ M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and J. Ostermann<b
 
 
 2013.
-
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 
 <br />
 
@@ -493,7 +493,7 @@ A. Kuznetsova, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 2013.
-
+IEEE International Conference on Computer Vision (ICCV) Workshops. 3rd Workshop on Consumer Depth Cameras for Computer Vision (CDC4CV).
 
 <br />
 
@@ -530,7 +530,7 @@ A. Kuznetsova, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 
 
 2013.
-
+Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective.
 
 <br />
 
@@ -568,7 +568,7 @@ M. Fenzi, R. Dragon, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and J. 
 
 
 2012.
-
+German Conference on Pattern Recognition (GCPR).
 
 <br />
 
@@ -642,7 +642,7 @@ April
 
 
 2012.
-
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 
 <br />
 
@@ -679,7 +679,7 @@ April
 
 
 2012.
-
+Outdoor and Large-Scale Real-World Scene Analysis.
 
 <br />
 
@@ -718,7 +718,7 @@ S. Maleschlijski, G. H. Sendra, A. Di Fino, <strong>L. Leal-Taix&eacute;</strong
 
 
 2012.
-
+Biointerphases.
 
 <br />
 
@@ -755,7 +755,7 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br
 
 
 2012.
-
+Outdoor and Large-Scale Real-World Scene Analysis.
 
 <br />
 
@@ -793,7 +793,7 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br
 
 
 2011.
-
+Video Processing and Computational Video.
 
 <br />
 
@@ -831,7 +831,7 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br
 
 
 2011.
-
+IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop on Modeling, Simulation and Visual Analysis of Large Crowds.
 
 <br />
 
@@ -868,7 +868,7 @@ S. Maleschlijski, <strong>L. Leal-Taix&eacute;</strong>, S. Weisse, A. Di Fino, 
 
 
 2011.
-
+Microscopic Image Analysis with Applications in Biology (MIAAB).
 
 <br />
 
@@ -905,7 +905,7 @@ G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, T. Truong and B. Rosenhahn<
 
 
 2011.
-
+German Conference on Pattern Recognition (GCPR).
 
 <br />
 
@@ -942,7 +942,7 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 2011.
-
+IEEE International Conference on Computer Vision (ICCV).
 
 <br />
 
@@ -979,7 +979,7 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 2010.
-
+German Conference on Pattern Recognition (GCPR).
 
 <br />
 
@@ -1016,7 +1016,7 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 2009.
-
+World Congress on Medical Physics and Biomedical Engineering.
 
 <br />
 
@@ -1053,7 +1053,7 @@ G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Muelle
 
 
 2009.
-
+IEEE Workshops on Motion and Video Computing (WMVC).
 
 <br />
 
